--- a/Amazon_Revew_Analysis.ipynb
+++ b/Amazon_Revew_Analysis.ipynb
@@ -58,9 +58,10 @@
     "### - 2014 Data suggests a more aggressive sales for back-to-school season.\n",
     "### - Comparing Amazon Instant video with the Box Office Sales, scraped from Box Office Mojo, shows opposite trend during weeks 16 and 17, probably worse box office performance enhanced the instant video demand. However, this trend is different for the available weeks in 2014.\n",
     "\n",
-    "# Questions:\n",
+    "# To Do:\n",
     "\n",
-    "1. Brake down the categories to estimate product life time.\n",
+    "1. Break down the categories to estimate product life time.\n",
+    "2. Break down by price to see the proportion\n",
     "2. Combine with sentiment analysis to understand effects of the events.\n",
     " "
    ]
